# gravity-sim

./: .clangd  .gitignore  CMakeLists.txt  physics.cpp  physics.hpp
src/: graphics.hpp  main.cpp  physics.cpp  physics.hpp  raylib_wrap.cpp  raylib_wrap.hpp
tests/: CMakeLists.txt  tests.cpp
